--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,14 +3,12 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    min-height: calc(100vh) !important;
     
 }
 .title1{
     font-size: 80px; 
     margin-bottom: 30px;
     margin-top: 100px;
-    min-height: 100px;
     margin-left: 100px;
   }
 
@@ -29,6 +27,7 @@ p{
     text-align: center;
     border: 3px solid white;
     border-radius: 10px;
+
 }
 
 .profile-pic{
@@ -37,7 +36,7 @@ p{
     border: 2px solid #460c26;
     margin-bottom: 50px;
     border-radius: 20px;
-    margin-left: 200px;
+    margin-left: 150px;
 }
 
 
@@ -57,16 +56,21 @@ p{
 }
 
 @media (max-width: 800px) {
+   
     .about{
         flex-direction: column;
     }
     .profile-pic{
-        width: 150px;
-        height: 150px;
+        width: 200px;
+        height: 200px;
+        justify-content: center;
 
     }
     .about-me{
         width: 100%;
+    }
+    p{
+        font-size: 20px;
     }
    
 }
