--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -10,10 +10,10 @@
     color: white;
 }
 .contact-title{
-    margin-top: 100px;
-    margin-left: 500px;
+    margin-top: 20px;
+    margin-left: 600px;
     font-size: 48px;
-    min-height: 100px;
+    /* min-height: 100px; */
     
 }
 .contact p{
