--- a/src/components/Card/Cards.css
+++ b/src/components/Card/Cards.css
@@ -44,6 +44,8 @@ main h1 {
 }
 #card:hover {
     box-shadow: 0 0 20px;
+    width: 600px;
+
     
 }
 #card img {
@@ -66,6 +68,7 @@ main h1 {
     align-items: center;
 }
 #card a:hover {
+    box-shadow: #fff 0 5px 2px;
     background-color: #460c26;
 }
 #card p{
